# kodo

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.ja.md  README.md
.claude/skills/kodo-release/: SKILL.md
.github/workflows/: ci.yml  release.yml
benches/: git_stats.rs
docs/: versioning.md
src/: error.rs
src/cli/: args.rs  run.rs
src/git/: diff.rs  repository.rs
src/output/: mod.rs  table.rs
src/stats/: collector.rs  mod.rs  timezone.rs  types.rs
src/tui/: app.rs  chart_type.rs  mod.rs  ui.rs
src/tui/mvu/: action.rs  mod.rs  model.rs  update.rs
src/tui/widgets/: diverging_bar_chart.rs  horizontal_bar_chart.rs  mod.rs  vertical_bar_chart.rs
tests/: action_from_key.rs  tui_ui_snapshots.rs
tests/common/: mod.rs  tui_fixture.rs  tui_render.rs
tests/snapshots/: tui_ui_snapshots__ui_single_add_del.snap  tui_ui_snapshots__ui_single_commits.snap  tui_ui_snapshots__ui_single_files_changed.snap  tui_ui_snapshots__ui_single_hour.snap  tui_ui_snapshots__ui_single_weekday.snap  tui_ui_snapshots__ui_split_default.snap
website/: .gitignore  CLOUDFLARE_SETUP.md  i18n.json  package.json  pnpm-lock.yaml  rspress.config.ts  tsconfig.json
website/docs/en/: _meta.json  changelog.md  cli-reference.md  configuration.md  contributing.md  getting-started.md  index.md
website/docs/ja/: changelog.md  cli-reference.md  configuration.md  contributing.md  getting-started.md  index.md
