[package]
name = "kodo"
version = "0.5.0"
edition = "2024"
rust-version = "1.93"
authors = ["yumazak"]
description = "A CLI tool for analyzing Git commit statistics with TUI visualization"
repository = "https://github.com/yumazak/kodo"
homepage = "https://github.com/yumazak/kodo"
license = "MIT"
keywords = ["git", "statistics", "cli", "tui", "ratatui"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "kodo"
path = "src/lib.rs"

[[bin]]
name = "kodo"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Git
git2 = "0.19"

# TUI (Phase 2)
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Utilities
dirs = "5.0"

# Progress indicator
indicatif = "0.18.3"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "git_stats"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
